; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_dir_get.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_dir_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dir_savefile = common dso_local global i8* null, align 8
@current_savefile_dir = common dso_local global i8* null, align 8
@dir_savestate = common dso_local global i8* null, align 8
@current_savestate_dir = common dso_local global i8* null, align 8
@dir_system = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @dir_get(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %16 [
    i32 130, label %5
    i32 133, label %7
    i32 129, label %9
    i32 132, label %11
    i32 128, label %13
    i32 131, label %15
  ]

5:                                                ; preds = %1
  %6 = load i8*, i8** @dir_savefile, align 8
  store i8* %6, i8** %2, align 8
  br label %17

7:                                                ; preds = %1
  %8 = load i8*, i8** @current_savefile_dir, align 8
  store i8* %8, i8** %2, align 8
  br label %17

9:                                                ; preds = %1
  %10 = load i8*, i8** @dir_savestate, align 8
  store i8* %10, i8** %2, align 8
  br label %17

11:                                               ; preds = %1
  %12 = load i8*, i8** @current_savestate_dir, align 8
  store i8* %12, i8** %2, align 8
  br label %17

13:                                               ; preds = %1
  %14 = load i8*, i8** @dir_system, align 8
  store i8* %14, i8** %2, align 8
  br label %17

15:                                               ; preds = %1
  br label %16

16:                                               ; preds = %1, %15
  store i8* null, i8** %2, align 8
  br label %17

17:                                               ; preds = %16, %13, %11, %9, %7, %5
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
